--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vue-toast-notification": "^0.6.0",
-    "vuex": "^3.5.1"
+    "vuex": "^3.5.1",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.11.5",
